<resources>
    <string name="app_name">My Application</string>
    <string-array name="blood_type">
        <item>@string/blood_type_a</item>
        <item>@string/blood_type_b</item>
        <item>@string/blood_type_o</item>
        <item>@string/blood_type_ab</item>
        <item>@string/blood_type_hint</item>
    </string-array>
    <string name="blood_type_a">A型</string>
    <string name="blood_type_b">B型</string>
    <string name="blood_type_o">O型</string>
    <string name="blood_type_ab">AB型</string>
    <string name="blood_type_hint">Please choose</string>

    <string-array name="cancer_stage">
        <item>@string/cancer_stage_0</item>
        <item>@string/cancer_stage_1</item>
        <item>@string/cancer_stage_2</item>
        <item>@string/cancer_stage_3</item>
        <item>@string/cancer_stage_4</item>
        <item>@string/cancer_stage_hint</item>
    </string-array>
    <string name="cancer_stage_0">0</string>
    <string name="cancer_stage_1">I</string>
    <string name="cancer_stage_2">II</string>
    <string name="cancer_stage_3">III</string>
    <string name="cancer_stage_4">IV</string>
    <string name="cancer_stage_hint">Please choose</string>

    <string-array name="fake_cancer_type">
        <item>@string/cancer_type_0</item>
        <item>@string/cancer_type_1</item>
        <item>@string/cancer_type_2</item>
        <item>@string/cancer_type_3</item>
        <item>@string/cancer_type_4</item>
        <item>@string/cancer_type_hint</item>
    </string-array>
    <string name="cancer_type_0">cancer 0</string>
    <string name="cancer_type_1">cancer 1</string>
    <string name="cancer_type_2">cancer 2</string>
    <string name="cancer_type_3">cancer 3</string>
    <string name="cancer_type_4">cancer 4</string>
    <string name="cancer_type_hint">Please choose</string>

    <string name="date_of_birth_text_format">%d/%d/%d</string>


    <string name="profile_viewpager_title_1">Title1</string>
    <string name="profile_viewpager_title_2">Title2</string>
    <string name="profile_viewpager_title_3">Title3</string>
    <string name="profile_basic_information">基本情報</string>
    <string name="profile_name">氏名</string>
    <string name="profile_name_hint">山田花子</string>
    <string name="profile_date_of_birth">生年月日</string>
    <string name="profile_date_of_birth_hint">例）19601210</string>
    <string name="profile_gender">性別</string>
    <string name="profile_male">男性</string>
    <string name="profile_female">女性</string>
    <string name="profile_blood_type">血液型</string>
    <string name="profile_height">身長</string>
    <string name="profile_weight">体重</string>
    <string name="profile_allergy">アレルギー</string>fill
    <string name="profile_medicine">お薬</string>
    <string name="profile_food">⾷べ物</string>
    <string name="profile_other_allergy">その他</string>
    <string name="profile_other_allergy_hint">アレルギー詳細を記入してください</string>
    <string name="profile_cancer_type">がんの種類</string>
    <string name="profile_must_fill">必須</string>
    <string name="profile_cancer_stage">ステージ</string>
    <string name="profile_other_disease_is_being_treat">他の治療中の病気</string>
    <string name="profile_other_disease_is_being_treat_hint">詳細を記入してください</string>
    <string name="profile_insurance">保険証など</string>
    <string name="profile_save">保存する</string>
    <string name="file_provider">com.example.myapplication.fileprovider</string>
    <string name="image_name_format">yyyyMMdd_HHmmss</string>
</resources>
